<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name">FollowOne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standings">Standings</string>
    <string name="item_flag">Driver\'s National Flag</string>
    <string name="next_race_text">Next Grand Prix</string>
    <string name="last_race_text">Last Race Results</string>
    <string name="calendar">Calendar</string>
    <string name="news">News</string>
    <string name="error_http">Could not reach the server.</string>
    <string name="grand_prix_name_sample">Gulf Air Bahrain Grand Prix</string>
    <string name="grand_prix_circuit_sample">Bahrain International Circuit</string>
    <string name="grand_prix_date_sample">05 May</string>
    <string name="grand_prix_country_flag_description">Grand Prix country flag</string>
    <string name="grand_prix_circuit_description">Grand Prix Circuit</string>
    <string name="race_weekend">Race Weekend</string>
    <string name="round_variable">Round %1$s</string>
    <string name="countdown">Countdown</string>
    <string name="_1st_place">1st Place</string>
    <string name="_2nd_place">2nd Place</string>
    <string name="_3rd_place">3rd Place</string>
    <string name="pole_position">Pole Position</string>
    <string name="fastest_lap">Fastest Lap</string>
    <string name="can_not_access_to_internet_check_your_connection">Can not access to internet. Check your connection.</string>
    <string name="could_not_reach_the_server">Could not reach the server.</string>


</resources>